# oshismash

./: .gitignore  Cargo.toml  flake.nix  sqitch.conf
assets/: app.css  tailwind.config.js
nix/: shell.nix
nix/services/: oshismash.nix
public/: site.webmanifest
sql/: sqitch.plan
sql/deploy/: extensions.sql  guests.sql  vtubers.sql
sql/revert/: extensions.sql  guests.sql  vtubers.sql
sql/test/function/: vote.sql
sql/verify/: extensions.sql  guests.sql  vtubers.sql
src/: config.rs  controllers.rs  db.rs  lib.rs  main.rs  oshismash.rs  oshismash_web.rs
src/component/: icon.rs
src/controllers/: assets.rs  vote.rs
src/oshismash/: guests.rs  vote.rs  vtubers.rs
src/oshismash_web/: client_data.rs  components.rs  cookie_util.rs  handlers.rs  views.rs  vtubers.rs
src/oshismash_web/components/: icon.rs
src/oshismash_web/handlers/: settings.rs  vote.rs  vtuber.rs
src/oshismash_web/views/: root.rs  vote.rs
src/views/: root.rs  vote.rs
