[package]
name = "oshismash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# For the web server
axum = "0.5"
hyper = "0.14"
axum-extra = { version = "0.3", features = [ "cookie" ] }

# Serialization/Deserialization
serde = "1.0"
serde_json = "1.0"

# Middleware
tower = "0.4"

# async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Template
maud = { git = "https://github.com/sekunho/maud", branch = "main", features = [ "axum" ] }

# Database
tokio-postgres = "0.7"
deadpool-postgres = { version = "0.10", features = ["serde"] }

# TODO: Add native-tls later
